--- a/package.json
+++ b/package.json
@@ -76,5 +76,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+    "homepage": "https://yourusername.github.io/your-repo-name"
   }
 }
